data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_439.wast
;; 10. **Test Description:** Design a test where a loop conditionally triggers a `br` instruction based on values at different stack heights. The validation focuses on correct operand stack unwinding and ensuring that irregular stack states do not lead to an unexpected infinite loop.

(assert_invalid
  (module
    (func $loop-with-br (result i32)
      (loop $loop (result i32)
        (i32.const 42)
        (i32.const 1)
        (br_if $loop (i32.eqz (i32.const 0)))
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)